@@ -126,7 +126,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
                 <configuration>
-                    <argLine>-Djava.library.path=${project.build.directory}</argLine>
+                    <argLine>-Djava.library.path=${project.build.directory} --enable-native-access=ALL-UNNAMED</argLine>
                     <!-- Run only ClassNameOrderTest.java for testing purposes -->
                     <includes>
                         <include>**/ClassNameOrderTest.java</include>
